add more paragraph elements to my webpage

--- a/cat.html
+++ b/cat.html
@@ -5,8 +5,7 @@
 </head>
 <h1>Gracie, my cute little Kitty</h1>
 <h2>Thank you for coming to my cats homepage, she is quite amazing so it is not surprisinng that you are here to check her out.</h2>
-<p> My cute little kitty is named Gracie.  She is a bangel. which means that she is part asian leopard cat and half siamese.  She has the markings of a leopard, but the size and the temperment of a siamese cat. She is 5 years old, and I got her when she was 8 weeks old.</p>
-<p>Some cats it seems are into toys, some affection, while some cats only live for food.  Gracie doesnt play with toys often, nor does she like people, she is more of a food cat. Even still, she does play with toys on occasion.</p>
+<p> My cute little kitty is named Gracie.  She is a bangel. which means that she is part asian leopard cat and half siamese.  She has the markings of a leopard, but the size and the temperment of a siamese cat. She is 5 years old, and I got her when she was 8 weeks old.  Some cats it seems are into toys, some affection, while some cats only live for food.  Gracie doesnt play with toys often, nor does she like people, she is more of a food cat. Even still, she does play with toys on occasion.</p>
 <h2>Some of Gracies favorite toys are:</h2>
  <ul>
    <li>Feather on a stick</li>
@@ -14,5 +13,5 @@
    <li>Wodded up paper or tin foil</li>
    <li>Couches and anything expnsive that is made of fabric.</li>
  </ul>
- 
+ <p> Being that Gracie is not so much into toys or people she spends a large portion of her waking life eating food, wanting to eat food, or annoyingly asking to be given food.  From the second i wake up in the morning she stands next to me screaming at the top of her lungs for me to feed her breakfast and from about 2:30 in the afternoon through the evening she sits in the kitchen trying to collect dropeed scraps of food before the dogs can get to it. m It is bizarre.
 </html>
