add this page to my new repository so i have this project for class

--- a/cat.html
+++ b/cat.html
@@ -6,20 +6,26 @@
   <script src="js/jquery-3.2.1.js"></script>
   <script src="js/scripts.js"></script>
   <title>Gracie</title>
+  <style>
+    body {
+      background-image: url("img/horse.jpg");
+      background-size: 1700px 1700px;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  </style>
 </head>
 <body>
-  <button class="btn btn1" id="light">Light</button>
-  <button class="btn btn2" id="dark">Dark</button>
-  <h1>Gracie, my cute little Kitty</h1>
-  <h2>Thank you for coming to my cats homepage, she is quite amazing so it is not surprisinng that you are here to check her out.</h2>
-  <p> My cute little kitty is named Gracie.  She is a bangel. which means that she is part asian leopard cat and half siamese.  She has the markings of a leopard, but the size and the temperment of a siamese cat. She is 5 years old, and I got her when she was 8 weeks old.  Some cats it seems are into toys, some affection, while some cats only live for food.  Gracie doesnt play with toys often, nor does she like people, she is more of a food cat. Even still, she does play with toys on occasion.</p>
-  <h2>Some of Gracies favorite toys are:</h2>
+  <h1>My cute little kitty, Gracie.</h1>
+  <h2>Thank you for coming to Gracie's homepage. She is quite amazing so it is not too surprising that you are here to check her out.</h2>
+  <p> My amazing kitty is named Gracie.  She is a bangel, which means that she is part asian leopard cat and half siamese.  She has the markings of a leopard, but the size and the temperment of a siamese cat. She is 5 years old, and I got her when she was 8 weeks old.  Some cats it seems are into toys, some affection, while some cats only live for food.  Gracie doesn't play with toys often, nor does she like people. Gracie is more of a food cat. Even still, she does play with toys on occasion.</p>
+  <h2>Some of Gracie's favorite toys are:</h2>
    <ul>
      <li>Feather on a stick</li>
      <li>Little toy mice</li>
      <li>Wodded up paper or tin foil</li>
-     <li>Couches and anything expnsive that is made of fabric.</li>
+     <li>Couches and anything expnsive that is made of fabric that she can claw at.</li>
    </ul>
-   <p> Being that Gracie is not so much into toys or people she spends a large portion of her waking life eating food, wanting to eat food, or annoyingly asking to be given food.  From the second i wake up in the morning she stands next to me screaming at the top of her lungs for me to feed her breakfast and from about 2:30 in the afternoon through the evening she sits in the kitchen trying to collect dropeed scraps of food before the dogs can get to it. m It is bizarre.
+   <p id="two"> Being that Gracie is not so much into toys or people she spends a large portion of her waking life eating food, wanting to eat food, or annoyingly asking to be given food.  From the second I wake up in the morning she stands next to me screaming at the top of her lungs for me to feed her breakfast, and from about 2:30 in the afternoon through the evening she sits in the kitchen trying to collect dropped scraps of food before the dogs can get to it.  It is bizarre really.
   </body>
 </html>
