--- a/index.html
+++ b/index.html
@@ -6,26 +6,21 @@
   <script src="js/jquery-3.2.1.js"></script>
   <script src="js/scripts.js"></script>
   <title>Gracie</title>
-  <style>
-    body {
-      background-image: url("img/horse.jpg");
-      background-size: 1700px 1700px;
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-  </style>
 </head>
 <body>
-  <h1>My cute little kitty, Gracie.</h1>
-  <h2>Thank you for coming to Gracie's homepage. She is quite amazing so it is not too surprising that you are here to check her out.</h2>
-  <p> My amazing kitty is named Gracie.  She is a bangel, which means that she is part asian leopard cat and half siamese.  She has the markings of a leopard, but the size and the temperment of a siamese cat. She is 5 years old, and I got her when she was 8 weeks old.  Some cats it seems are into toys, some affection, while some cats only live for food.  Gracie doesn't play with toys often, nor does she like people. Gracie is more of a food cat. Even still, she does play with toys on occasion.</p>
-  <h2>Some of Gracie's favorite toys are:</h2>
-   <ul>
-     <li>Feather on a stick</li>
-     <li>Little toy mice</li>
-     <li>Wodded up paper or tin foil</li>
-     <li>Couches and anything expnsive that is made of fabric that she can claw at.</li>
-   </ul>
-   <p id="two"> Being that Gracie is not so much into toys or people she spends a large portion of her waking life eating food, wanting to eat food, or annoyingly asking to be given food.  From the second I wake up in the morning she stands next to me screaming at the top of her lungs for me to feed her breakfast, and from about 2:30 in the afternoon through the evening she sits in the kitchen trying to collect dropped scraps of food before the dogs can get to it.  It is bizarre really.
+    <button id="light-background">Change Colors</button>
+    <button id="dark-background">Change Colors</button>
+
+    <h1>My cute little kitty, Gracie.</h1>
+    <h2>Thank you for coming to Gracie's homepage. She is quite amazing so it is not too surprising that you are here to check her out.</h2>
+    <p> My amazing kitty is named Gracie.  She is a bangel, which means that she is part asian leopard cat and half siamese.  She has the markings of a leopard, but the size and the temperment of a siamese cat. She is 5 years old, and I got her when she was 8 weeks old.  Some cats it seems are into toys, some affection, while some cats only live for food.  Gracie doesn't play with toys often, nor does she like people. Gracie is more of a food cat. Even still, she does play with toys on occasion.</p>
+    <h2>Some of Gracie's favorite toys are:</h2>
+     <ul>
+       <li>Feather on a stick</li>
+       <li>Little toy mice</li>
+       <li>Wodded up paper or tin foil</li>
+       <li>Couches and anything expnsive that is made of fabric that she can claw at.</li>
+     </ul>
+     <p id="two"> Being that Gracie is not so much into toys or people she spends a large portion of her waking life eating food, wanting to eat food, or annoyingly asking to be given food.  From the second I wake up in the morning she stands next to me screaming at the top of her lungs for me to feed her breakfast, and from about 2:30 in the afternoon through the evening she sits in the kitchen trying to collect dropped scraps of food before the dogs can get to it.  It is bizarre really.</p>
   </body>
 </html>
